--- a/spacestation.html
+++ b/spacestation.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>The Space Station | Resort</title>
-		<link rel="stylesheet" href="./css/shared.css">
-		<link rel="stylesheet" href="./css/animation.css">
+		<link rel="stylesheet" href="../index-html/shared.css">
+		<link rel="stylesheet" href="../index-html/animation.css">
 	</head>
 	<body>
 			
